<resources>
    <string name="app_name">DrawYourPath</string>
    <string name="your_name">Your Name</string>
    <string name="enter_button">enter</string>
    <string name="get_button_firebase">GET</string>
    <string name="your_e_mail_firebase">Your E-Mail</string>
    <string name="your_phone_number_firebase">Your Phone Number</string>
    <string name="set_button_firebase">SET</string>
    <string name="welcome_title_userProfileCreation">Welcome !</string>
    <string name="welcome_message_userProfileCreation">We are happy to welcome you to the DrawYourPath Community. Before you can start to draw your first path, you will need to create your profile.</string>
    <string name="start_profile_creation_userProfileCreation">Create your profile now</string>
    <string name="user_name">User Name</string>
    <string name="please_enter_a_user_name">Please enter a User Name :</string>
    <string name="test_availability">Test Availability</string>
    <!-- TODO Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_get_to_know_you_better">To get to know you better...</string>
    <string name="enter_your_firstname">Enter your firstname</string>
    <string name="enter_your_surname">Enter your surname</string>
    <string name="your_date_of_birth">Your date of birth :</string>
    <string name="profile_image">User\'s profile image</string>
    <string name="add_friend">add friend</string>
    <string name="friend_search_hint">Search for users...</string>
    <string name="empty_date_view">dd/mm/yyyy</string>
    <string name="select_a_date">Select a date</string>
    <string name="to_challenge_you_every_days">To challenge you...</string>
    <string name="how_many_kilometer_do_you_want_to_run_through_each_day">How many kilometers do you plan to run each day ?</string>
    <string name="enter_your_distance_goal">Distance (in km)</string>
    <string name="enter_your_time">Time(in minute)</string>
    <string name="how_many_path_do_you_want_to_draw_each_day">How many paths do you plan to draw each day ?</string>
    <string name="enter_your_number_of_path">Number of path</string>
    <string name="validate">Validate</string>
    <string name="explication_text_goals_init">One of the goal of the DrawYourPath app is to challenge yourself every day. Please enter some daily goals :</string>
    <string name="congratulation_your_profile_have_been_successfully_created">Congratulation your profile have been successfully created !</string>
    <string name="begin_now">BEGIN NOW</string>
    <string name="explication_text_username_init">You can click on the CHECK AVAILABILITY button to check if your proposition is available. After you click on the VALIDATE button your user name is fixed.</string>
    <string name="how_many_time_do_you_want_to_practice_exercise_each_day_in_minutes">How many minutes do you plan to practice exercise each day ?</string>
    <string name="profile_menu_item">Profile</string>
    <string name="draw_menu_item">Draw</string>
    <string name="history_menu_item">History</string>
    <string name="community_menu_item">Community</string>
    <string name="friends_menu_item">Friends</string>
    <string name="username">Username</string>
    <string name="email_example">example@smth.com</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="stats">Stats</string>
    <string name="stats_and_stuff">Stats and stuff</string>

    <string name="goals">Goals</string>
    <string name="trophies">Trophies</string>
    <string name="milestones">Milestones</string>
    <string name="challenge">Challenge</string>
    <string name="enter_a_number"><font size="15">Enter a number</font></string>
    <string name="trophy">trophy</string>
    <string name="server_client_id">593734550817-74svh08a2ram22m54eqvln88kecg3nr0.apps.googleusercontent.com</string>
    <string name="current_password">Current password:</string>
    <string name="new_password">New password:</string>
    <string name="confirm_new_password">Confirm new password:</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="preferences_menu_item">Preferences</string>
    <string name="choose_a_profile_photo">Choose a profile photo...</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="init_photo_description">You can choose your profile photo and click on VALIDATE to set it. If you don\'t want to set a profile photo, click on SKIP.</string>
    <string name="skip">Skip</string>
    <string name="channel_challenges_reminder_id">CHALLENGES</string>
    <string name="channel_challenges_reminder_desc">Notifications to remind you to complete your weekly challenges.</string>
    <string name="challenge_reminder_notification_text">Have you completed all your challenges for today? If not, consider drawing more paths soon!</string>
    <string name="challenges_reminder">Challenges Reminder</string>
    <string name="challenges_reminder_time">16:00</string>
    <string name="sort">sort</string>
    <string name="menu">menu</string>
    <string name="upvote">upvote</string>
    <string name="downvote">downvote</string>
    <string name="back">back</string>
    <string name="home">Home</string>
    <string name="tournament_creation">Tournament Creation</string>
    <string name="choose_the_title">Choose the title</string>
    <string name="tournament_title">Tournament title</string>
    <string name="choose_the_description">Choose the description</string>
    <string name="tournament_description">Tournament description</string>
    <string name="select_the_starting_date_and_time">Select the starting date and time</string>
    <string name="select_the_ending_date_and_time">Select the ending date and time</string>
    <string name="select_the_visibility">Select the visibility</string>
    <string name="public_visibility">Public</string>
    <string name="friends_only">Friends only</string>
    <string name="create">Create</string>
    <string name="tournament_creation_title_error">* Title should not be empty</string>
    <string name="tournament_creation_description_error">* Description should not be empty</string>
    <string name="tournament_creation_start_date_error">* Starting time and date should be at least 1 hour from now</string>
    <string name="tournament_creation_end_date_error">* Ending time and date should be at least 1 day from starting day and time</string>
    <string name="tournament_creation_visibility_error">* One visibility option should be checked</string>
    <string name="create_new_tournament">Create new tournament</string>
    <string name="friends">FRIENDS</string>
    <string name="choose_a_new_profile_photo">Choose a new profile photo :</string>
    <string name="modify_profile_photo_description">You can choose a new profile photo and click on VALIDATE to set it. If you want to keep your past profile photo, click on CANCEL.</string>
    <string name="actual_profile_photo">Actual profile photo :</string>
    <string name="new_profile_photo_selected">New profile photo selected :</string>
    <string name="error_select_new_profile_photo">You have forgotten to select a new profile photo.</string>
    <string name="choose_your_new_username">Choose your new username :</string>
    <string name="username_can_t_be_empty">The username can\'t be empty !</string>
    <string name="username_available">*The username %s is available</string>
    <string name="username_not_vailable_or_previous_one">*The username %s is NOT available or equal to the previous one</string>
    <string name="updatepassword_confirmation_not_matching">Confirmation password does not match</string>
    <string name="updatepassword_unknown_error">Unknown error</string>
    <string name="updatepassword_success">Password updated</string>
    <string name="updatepassword_user_not_signed">Not signed in</string>
    <string name="toast_test_error_message">Should only appear during Testing, if not then a setCurrentUser is missing</string>
    <string name="kilometers">kilometers</string>
    <string name="minutes">minutes</string>
    <string name="paths">paths</string>
    <string name="progress_over_goal">%.3f/%.0f</string>
    <string name="progress_over_goal_path">%.0f/%.0f</string>
    <string name="start_drawing">Start drawing</string>
    <string name="pause">Pause</string>
    <string name="time">TIME</string>
    <string name="initial_time">00:00:00</string>
    <string name="average_speed_m_s">AVERAGE SPEED (M/S)</string>
    <string name="distance_km">DISTANCE (KM)</string>
    <string name="initial_speed">0,00</string>
    <string name="initial_distance">0,00</string>
    <string name="end_the_draw">END THE DRAW</string>
    <string name="resume">RESUME</string>
    <string name="back_to_menu">BACK TO MENU</string>
    <string name="total_time">TOTAL TIME</string>
    <string name="initial_calorie">0</string>
    <string name="time_for_1_km">AVERAGE TIME PER KM</string>
    <string name="calories_burned_kcal">CALORIES BURNED (KCAL)</string>
    <string name="end_time">END TIME</string>
    <string name="welcome_chat_message">Welcome to the %s conversation !</string>
    <string name="hint_enter_message">enter message</string>
    <string name="desc_send_image">send image</string>
    <string name="desc_send_run">share run</string>
    <string name="desc_send_message">send message</string>
    <string name="menu_chat">chat</string>
    <string name="settings">Settings</string>
    <string name="distance">Distance:</string>
    <string name="speed">Speed:</string>
    <string name="calories_burnt">Calories burnt:</string>
    <string name="date">Date:</string>
    <string name="senderName">Sender Name</string>
    <string name="message_content_string">Message Content</string>
    <string name="chat_welcome_message">Welcome to the chat!</string>
    <string name="delete_chat_icon_text">Delete</string>
    <string name="acquired">Acquired %s</string>
    <string name="changeLeftButton"><![CDATA[<]]></string>
    <string name="path_drawn">Path Drawn</string>
    <string name="changeRightButton"><![CDATA[>]]></string>
    <string name="global_stats">Global Stats</string>
    <string name="ml_shape_recognition_description">Remark : The shape description and score (the best score is 0), given above, are given by an automatic form recognition Machine Learning model.</string>
    <string name="shape_recognized_on_the_path_drawn">- Shape recognized on the Path drawn :</string>
    <string name="score_of_the_shape_recognized">- Score of the shape recognized :</string>
    <string name="average_speed_per_km">Avg Speed per Km</string>
    <string name="duration_per_km">Duration per Km</string>
    <string name="distance_per_segment">Distance per Segment</string>
    <string name="duration_per_segment">Duration per Segment</string>
    <string name="average_speed_per_segment">Avg Speed per Segment</string>
    <string name="distance_in_km">Distance (in Km)</string>
    <string name="average_speed_in_m_s">Average Speed (m/s)</string>
    <string name="duration_in_s">Duration (s)</string>
    <string name="segment">Segment</string>
    <string name="distance_in_m">Distance (in m)</string>
    <string name="tournament_post_creation">Tournament Post Creation</string>
    <string name="select_the_tournament">Select the tournament</string>
    <string name="select_the_run">Select the run</string>
    <string name="post">Post</string>
    <string name="add_post">add post</string>
    <string name="display_distance">Distance: %s kilometers</string>
    <string name="display_duration">Duration: %s</string>
    <string name="display_shape">Shape: %s</string>
    <string name="display_score">Score: %.2f</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="average_speed">Average Speed</string>
    <string name="average_duration">Average Duration</string>
    <string name="average_duration_in_s">Average Duration (s)</string>
    <string name="average_distance_in_m">Average Distance (in m)</string>
    <string name="average_distance_in_km">Average Distance (in km)</string>
    <string name="average_distance">Average Distance</string>
    <string name="distance_goal">Distance Goal</string>
    <string name="distance_goal_in_m">Distance Goal (in m)</string>
    <string name="activity_time_goal">Time Goal</string>
    <string name="activity_time_goal_in_s">Time Goal (in s)</string>
    <string name="path_number_goal">Path Num. Goal</string>
    <string name="average_speed_in_m_s_title">Average Speed (in m/s) :</string>
    <string name="average_duration_in_s_title">Average Duration (in s) :</string>
    <string name="average_distance_in_km_title">Average Distance (in km) :</string>
    <string name="number_of_distance_goal_reached">Number of distance goal reached :</string>
    <string name="number_of_time_goal_reached">Number of time goal reached :</string>
    <string name="number_of_path_goal_reached">Number of path goal reached :</string>
    <string name="register">&#10010; register</string>
    <string name="check_mark">✔</string>
    <string name="post_details">post details</string>
</resources>