...
    </group>

    <item android:title="@string/stats_and_stuff">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/stats_menu_item"
                    android:title="@string/stats" />
                <item
                    android:id="@+id/challenge_menu_item"
                    android:title="@string/challenge" />
            </group>
        </menu>
    </item>

    <!-- Add the preferences item here -->
...
